--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .header{
     min-height: 80vh;
     width: 100%;
-    background-image: linear-gradient(rgba(4,9,30,0.7), rgba(4,9,30,0.7)), url(Outdoor1.jpg); /* Image not showing*/
+    background-image: linear-gradient(rgba(121, 224, 194, 0.7), rgba(5, 78, 5, 0.7)), url(Outdoor1.jpg); /* Image not showing*/
     background-position: center;
     background-size: cover;
     position: relative;
@@ -69,11 +69,11 @@ nav img{
 .quote-btn{
     display: inline-block;
     text-decoration: none;
-    color: #fff;
-    border: 1px solid #fff;
+    color: #ffffff;
+    border: 1px solid #075715;
     padding: 12px 34px;
-    font-size: 13px;
-    background: transparent;
+    font-size: 15px;
+    background: linear-gradient(rgba(121, 224, 194, 0.7), rgba(5, 78, 5, 0.7));
     position: relative;
     cursor:pointer;
 }
@@ -128,7 +128,7 @@ h1{
     
 }
 .service-para{
-    color: rgb(255, 255, 255);
+    color: rgb(48, 27, 27);
     font-size: 14px;
     font-weight:500;
     line-height: 22px;
@@ -147,14 +147,17 @@ p{
 }
 .services-col{
     flex-basis: 31%;
-    background: #fff3f3;
+    background: #90e97a;
     border-radius: 10px;
     margin-bottom: 5%;
     padding: 20px 12px;
     box-sizing:border-box;
     transition: 0.5s;
 }
-#lawn-services{
+#serviceheader{
+    min-height: 20vh;
+}
+/*#lawn-services{
     background-image: url("images/lawns.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -170,7 +173,7 @@ p{
     overflow: hidden;
     padding: 0px;
     background-position: center;
-}
+}*/
 h3{
     text-align: center;
     font-weight: 600;
@@ -178,7 +181,7 @@ h3{
     color:#ffffff;
 }
 .services-col:hover{
-    box-shadow: 0 0 20px 0px rgba(103,255,71,0.5);
+    box-shadow: 0 0 20px 0px rgba(4, 61, 17, 0.3);
 }
 @media(max-width: 700px){
     .row{
@@ -232,7 +235,7 @@ h3{
 .cta{
     margin: 100px auto;
     width: 80%;
-    background: #e96f6f;
+    background: #b6e2cc;
     border-radius: 10px;
     text-align: center;
     padding: 100px 0;
@@ -242,6 +245,11 @@ h3{
     color:rgb(22, 4, 4);
     margin-bottom: 40px;
     padding: 0;
+}
+h4{
+    margin-bottom: 30px;
+    font-size: 25px;
+    
 }
 @media(max-width: 700px){
     .cta h1{
@@ -273,11 +281,11 @@ h3{
 
     
 .form{
-    border: 1px solid #c71818;
+    border: 1px solid #031f07;
     margin: 50px auto;
     padding: 10px 20px;
     width: 50%;
-    background: #cc7878;
+    background: #b6e2cc;
     
     
 
@@ -289,10 +297,10 @@ h3{
     box-sizing: border-box;
     margin: 15px 0;
 }
-.getquote h3{
-    margin-top: 50px;
+.getquote h1{
+    margin-top: 30px;
+    text-align: center;
 }
-
 .quoteform button{
     margin-top:10px;
     margin-bottom: 10px;
